@@ -3,7 +3,6 @@
 import abc
 import collections.abc
 import enum
-import functools
 import typing
 from rpy2.rinterface_lib import embedded
 from rpy2.rinterface_lib import memorymanagement
@@ -13,6 +12,7 @@ from rpy2.rinterface_lib._rinterface_capi import _evaluated_promise
 from rpy2.rinterface_lib._rinterface_capi import SupportsSEXP
 from rpy2.rinterface_lib import conversion
 from rpy2.rinterface_lib.conversion import _cdata_res_to_rinterface
+from rpy2.rinterface_lib import na_values
 
 
 class Singleton(type):
@@ -610,7 +610,7 @@ class SexpVector(Sexp, metaclass=abc.ABCMeta):
             res = self.from_iterable(
                 [
                     self._R_VECTOR_ELT(
-                        cdata, i_c, 
+                        cdata, i_c,
                     ) for i_c in range(*i.indices(len(self)))
                 ],
                 cast_value=lambda x: x
@@ -667,11 +667,14 @@ class StrSexpVector(SexpVector):
 
     def __getitem__(
             self,
-            i: typing.Union[int, slice]) -> typing.Union['StrSexpVector', str]:
+            i: typing.Union[int, slice]
+    ) -> typing.Union['StrSexpVector', str, 'na_values.NA_Character']:
         cdata = self.__sexp__._cdata
         if isinstance(i, int):
             i_c = _rinterface._python_index_to_c(cdata, i)
             res = _rinterface._string_getitem(cdata, i_c)
+            if res is None:
+                res = na_values.NA_Character
         elif isinstance(i, slice):
             res = self.from_iterable(
                 [_rinterface._string_getitem(cdata, i_c)
@@ -682,23 +685,36 @@ class StrSexpVector(SexpVector):
                             ' not %s' % type(i))
         return res
 
-    def __setitem__(self,
-                    i: typing.Union[int, slice],
-                    value: typing.Union[str, typing.Sequence[str]]) -> None:
+    def __setitem__(
+            self,
+            i: typing.Union[int, slice],
+            value: typing.Union[str, typing.Sequence[typing.Optional[str]],
+                                'StrSexpVector', 'na_values.NA_Character']
+    ) -> None:
         cdata = self.__sexp__._cdata
         if isinstance(i, int):
             i_c = _rinterface._python_index_to_c(cdata, i)
-            if not isinstance(value, str):
-                value = str(value)
+            if isinstance(value, Sexp):
+                val_cdata = value.__sexp__._cdata
+            else:
+                if not isinstance(value, str):
+                    value = str(value)
+                val_cdata = _as_charsxp_cdata(value)
             self._R_SET_VECTOR_ELT(
                 cdata, i_c,
-                _as_charsxp_cdata(value)
+                val_cdata
             )
         elif isinstance(i, slice):
             for i_c, v in zip(range(*i.indices(len(self))), value):
+                if v is None:
+                    v_cdata = openrlib.rlib.R_NaString
+                else:
+                    if not isinstance(value, str):
+                        v = str(v)
+                    v_cdata = _as_charsxp_cdata(v)
                 self._R_SET_VECTOR_ELT(
                     cdata, i_c,
-                    _as_charsxp_cdata(v)
+                    v_cdata
                 )
         else:
             raise TypeError('Indices must be integers or slices, '
@@ -784,3 +800,89 @@ def unserialize(state):
         )
         res = _rinterface.SexpCapsule(ser)
     return res
+
+
+class NAIntegerType(int, metaclass=Singleton):
+
+    def __new__(cls, *args, **kwargs):
+        embedded.assert_isready()
+        return super().__new__(cls, openrlib.rlib.R_NaInt)
+
+    def __repr__(self) -> str:
+        return 'NA_integer_'
+
+    def __str__(self) -> str:
+        return 'NA_integer_'
+
+    def __bool__(self):
+        raise ValueError('R value for missing integer value')
+
+
+class NACharacterType(CharSexp, metaclass=SingletonABC):
+
+    def __init__(self):
+        embedded.assert_isready()
+        super().__init__(
+            CharSexp(
+                _rinterface.SexpCapsule(openrlib.rlib.R_NaString)
+            )
+        )
+
+    def __repr__(self) -> str:
+        return 'NA_character_'
+
+    def __str__(self) -> str:
+        return 'NA_character_'
+
+    def __bool__(self):
+        raise ValueError('R value for missing character value')
+
+
+class NALogicalType(int, metaclass=Singleton):
+
+    def __new__(cls, *args, **kwargs):
+        embedded.assert_isready()
+        return super().__new__(cls, openrlib.rlib.R_NaInt)
+
+    def __repr__(self) -> str:
+        return 'NA'
+
+    def __str__(self) -> str:
+        return 'NA'
+
+    def __bool__(self) -> bool:
+        raise ValueError('R value for missing boolean value')
+
+
+class NARealType(float, metaclass=Singleton):
+
+    def __new__(cls, *args, **kwargs):
+        embedded.assert_isready()
+        return super().__new__(cls, openrlib.rlib.R_NaReal)
+
+    def __repr__(self) -> str:
+        return 'NA_real_'
+
+    def __str__(self) -> str:
+        return 'NA_real_'
+
+    def __bool__(self) -> bool:
+        raise ValueError('R value for missing float value')
+
+
+class NAComplexType(complex, metaclass=Singleton):
+
+    def __new__(cls, *args, **kwargs):
+        embedded.assert_isready()
+        return super().__new__(cls,
+                               openrlib.rlib.R_NaReal,
+                               openrlib.rlib.R_NaReal)
+
+    def __repr__(self) -> str:
+        return 'NA_complex_'
+
+    def __str__(self) -> str:
+        return 'NA_complex_'
+
+    def __bool__(self):
+        raise ValueError('R value for missing complex value')
